# rdk-tr69hostif

./: CONTRIBUTING.md  LICENSE  Makefile.am  NOTICE  configure.ac  ip-iface-monitor.service  partners_defaults.json  rdk_build.sh  rdk_env.xml  tr69hostif.service  tr69hostif_no_new_http_server.service
src/: Makefile.am
src/hostif/handlers/: Makefile.am
src/hostif/handlers/include/: hostIf_CoPilotClient_ReqHandler.h  hostIf_DHCPv4Client_ReqHandler.h  hostIf_DeviceClient_ReqHandler.h  hostIf_EstoriaClient_ReqHandler.h  hostIf_EthernetClient_ReqHandler.h  hostIf_IPClient_ReqHandler.h  hostIf_InterfaceStackClient_ReqHandler.h  hostIf_MoCAClient_ReqHandler.h  hostIf_NotificationHandler.h  hostIf_SNMPClient_ReqHandler.h  hostIf_StorageSrvc_ReqHandler.h  hostIf_TimeClient_ReqHandler.h  hostIf_WiFi_ReqHandler.h  hostIf_XREClient_ReqHandler.h  hostIf_XrdkCentralT2_ReqHandler.h  hostIf_dsClient_ReqHandler.h  hostIf_jsonReqHandler.h  hostIf_msgHandler.h  hostIf_rbus_Dml_Provider.h  hostIf_updateHandler.h  x_rdk_req_handler.h  x_rdk_webconfig_dml_req_handler.h
src/hostif/handlers/src/: hostIf_CoPilotClient_ReqHandler.cpp  hostIf_DHCPv4Client_ReqHandler.cpp  hostIf_DeviceClient_ReqHandler.cpp  hostIf_EstoriaClient_ReqHandler.cpp  hostIf_EthernetClient_ReqHandler.cpp  hostIf_IARM_ReqHandler.cpp  hostIf_IPClient_ReqHandler.cpp  hostIf_InterfaceStackClient_ReqHandler.cpp  hostIf_MoCAClient_ReqHandler.cpp  hostIf_NotificationHandler.cpp  hostIf_SNMPClient_ReqHandler.cpp  hostIf_StorageService_ReqHandler.cpp  hostIf_TimeClient_ReqHandler.cpp  hostIf_WiFi_ReqHandler.cpp  hostIf_XREClient_ReqHandler.cpp  hostIf_XrdkCentralT2_ReqHandler.cpp  hostIf_dsClient_ReqHandler.cpp  hostIf_jsonReqHandlerThread.cpp  hostIf_msgHandler.cpp  hostIf_rbus_Dml_Provider.cpp  hostIf_sysScriptHandler.cpp  hostIf_updateHandler.cpp  x_rdk_req_handler.cpp  x_rdk_webconfig_dml_req_handler.cpp
src/hostif/httpserver/: Makefile.am
src/hostif/httpserver/include/: XrdkCentralComRFCVar.h  http_server.h  request_handler.h
src/hostif/httpserver/src/: XrdkCentralComRFCVar.cpp  http_server.cpp  request_handler.cpp
src/hostif/include/: IniFile.h  hostIf_main.h  hostIf_tr69ReqHandler.h  hostIf_utils.h  telemetry_logger.h
src/hostif/parodusClient/: Makefile.am  parodus.path  parodus.service  parodus_v4.path  parodus_v6.path  startParodus.sh
src/hostif/parodusClient/conf/: notify_webpa_cfg.json  webpa_cfg.json
src/hostif/parodusClient/pal/: Makefile.am  libpd.cpp  libpd.h  webpa_adapter.cpp  webpa_adapter.h  webpa_attribute.cpp  webpa_attribute.h  webpa_notification.cpp  webpa_notification.h  webpa_parameter.cpp  webpa_parameter.h
src/hostif/parodusClient/waldb/: Makefile.am  data-model-bootstrap.xml  data-model-generic.xml  snmp-data-model.xml  waldb.cpp  waldb.h
src/hostif/profiles/: Makefile.am
src/hostif/profiles/DHCPv4/: Device_DHCPv4_Client.cpp  Device_DHCPv4_Client.h  Makefile.am
src/hostif/profiles/Device/: Makefile.am  x_rdk_profile.cpp  x_rdk_profile.h
src/hostif/profiles/DeviceInfo/: Device_DeviceInfo.cpp  Device_DeviceInfo.h  Device_DeviceInfo_ProcessStatus.cpp  Device_DeviceInfo_ProcessStatus.h  Device_DeviceInfo_ProcessStatus_Process.cpp  Device_DeviceInfo_ProcessStatus_Process.h  Device_DeviceInfo_Processor.cpp  Device_DeviceInfo_Processor.h  Makefile.am  XrdkBlueTooth.cpp  XrdkBlueTooth.h  XrdkCentralComBSStore.cpp  XrdkCentralComBSStore.h  XrdkCentralComBSStoreJournal.cpp  XrdkCentralComBSStoreJournal.h  XrdkCentralComRFC.cpp  XrdkCentralComRFC.h  XrdkCentralComRFCStore.cpp  XrdkCentralComRFCStore.h
src/hostif/profiles/Ethernet/: Device_Ethernet_Interface.cpp  Device_Ethernet_Interface.h  Device_Ethernet_Interface_Stats.cpp  Device_Ethernet_Interface_Stats.h  Makefile.am
src/hostif/profiles/IP/: Device_IP.cpp  Device_IP.h  Device_IP_ActivePort.cpp  Device_IP_ActivePort.h  Device_IP_Diagnostics_DownloadDiagnostics.h  Device_IP_Diagnostics_IPPing.cpp  Device_IP_Diagnostics_IPPing.h  Device_IP_Diagnostics_SpeedTest.cpp  Device_IP_Diagnostics_SpeedTest.h  Device_IP_Diagnostics_TraceRoute.h  Device_IP_Diagnostics_TraceRoute_RouteHops.h  Device_IP_Diagnostics_UDPEchoConfig.h  Device_IP_Diagnostics_UploadDiagnostics.h  Device_IP_Interface.cpp  Device_IP_Interface.h  Device_IP_Interface_IPv4Address.cpp  Device_IP_Interface_IPv4Address.h  Device_IP_Interface_IPv6Address.cpp  Device_IP_Interface_IPv6Address.h  Device_IP_Interface_Stats.cpp  Device_IP_Interface_Stats.h  Makefile.am
src/hostif/profiles/InterfaceStack/: Device_InterfaceStack.cpp  Device_InterfaceStack.h  Makefile.am
src/hostif/profiles/STBService/: Capabilities.cpp  Capabilities.h  Components_AudioOutput.cpp  Components_AudioOutput.h  Components_DisplayDevice.cpp  Components_DisplayDevice.h  Components_HDMI.cpp  Components_HDMI.h  Components_SPDIF.cpp  Components_SPDIF.h  Components_VideoDecoder.cpp  Components_VideoDecoder.h  Components_VideoOutput.cpp  Components_VideoOutput.h  Components_XrdkEMMC.cpp  Components_XrdkEMMC.h  Components_XrdkSDCard.cpp  Components_XrdkSDCard.cpp.orig  Components_XrdkSDCard.h  Makefile.am
src/hostif/profiles/StorageService/: Makefile.am  Service_Storage.cpp  Service_Storage.h  Service_Storage_PhyMedium.cpp  Service_Storage_PhyMedium.h
src/hostif/profiles/Time/: Device_Time.cpp  Device_Time.h  Makefile.am
src/hostif/profiles/moca/: Device_MoCA_Interface.cpp  Device_MoCA_Interface.h  Device_MoCA_Interface_AssociatedDevice.cpp  Device_MoCA_Interface_AssociatedDevice.h  Device_MoCA_Interface_QoS.cpp  Device_MoCA_Interface_QoS.h  Device_MoCA_Interface_QoS_FlowStats.cpp  Device_MoCA_Interface_QoS_FlowStats.h  (+5 more)
src/hostif/snmpAdapter/: Makefile.am  snmpAdapter.cpp  snmpAdapter.h
src/hostif/src/: IniFile.cpp  hostIf_main.cpp  hostIf_utils.cpp  telemetry_logger.cpp
src/hostif/webcfg/: parodus_create_file.sh  webcfg_utils.cpp  webcfg_utils.h
src/hostif/webconfig_lite/: Makefile.am  parodus_create_file.sh  parodus_read_file.sh  webconfig_lite.cpp  webconfig_lite.h  webconfig_utils.cpp  webconfig_utils.h
src/tr69BusAgent/: Makefile.am  TR69BusAgent.cpp
src/tr69BusAgent/include/: TR69BusAgent.h
(+63 files in other folders)
